--- a/diario/package.json
+++ b/diario/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "expo": "~53.0.11",
+    "expo-av": "^15.1.6",
+    "expo-camera": "^16.1.8",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.3"
